--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -25,6 +25,10 @@ SP.TP.CONFIG.CSS_EDGE="Edge design"
 SP.TP.CONFIG.TOPMENU="Top Menu"
 SP.TP.CONFIG.TOPMENU_STANDARD="Standard Top Menu"
 SP.TP.CONFIG.TOPMENU_BAR="Link Bar"
+SP.TP.CONFIG.TOPMENU_BUTTON="Button Bar"
+SP.TP.CONFIG.TOPMENU_BUTTON_POS="Float Search/Add Buttons"
+SP.TP.CONFIG.LEFT="Left"
+SP.TP.CONFIG.RIGHT="Right"
 SP.TP.CONFIG.FONTS="Fonts"
 SP.TP.CONFIG.FONTSIZE="Base font size"
 SP.TP.CONFIG.FONT="Base font"
