(+) New template settings 'Hide search parameters'

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -34,6 +34,7 @@ Legend:
 	(+) Remembering last selected tab in local storage
 	(+) New Google Font 'Dosis' added to both templates
 	(+) New toolbar style 'buttonbar'
+	(+) New template settings 'Hide search parameters'
 
 	(!) Loading all fonts into the category edit screen
 	(!) Search phrases adapted to template style
