--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -17,6 +17,9 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.TP.SEARCH_HIDE="Hide search parameters"
+SP.TP.SEARCH_REFINE="Refine search parameters"
+
 SP.SH.PATH_TITLE="Search Parameters"
 SP.SH.PATH_TITLE_RESULT="Search Result"
 SP.EN.ADD_TITLE="var:[section] - Add Entry"
