--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -64,6 +64,7 @@ SP.TP.CONFIG.ENTRY_REDIRECTLOGIN="Redirect to login page"
 SP.TP.SETTINGS_SEARCH="Search Form Settings"
 SP.TP.SETTINGS_SEARCHGENERAL="General Settings"
 SP.TP.CONFIG.EXTENDEDSEARCH="Extended search button"
+SP.TP.CONFIG.HIDESEARCH="Hide search parameters"
 
 SP.TP.SETTINGS_ENTRIES="Entries Settings"
 SP.TP.SETTINGS_FEATURES="General Features"
