--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,10 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+
+SP.UPDATE.APPS_OUTDATED="SobiPro application(s) are outdated and need to be updated"
+SP.UPDATE.APPS_UPDATE=" View Updates"
+
 SP.FMN.IMG.DETECT_TRANSPARENCY="Detect Transparency"
 SP.FORMS="Entry & Search Form"
 SP.FORMS_TITLE="Title"
