--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -36,7 +36,7 @@ Legend:
 	(+) New toolbar style 'buttonbar'
 	(+) New template settings 'Hide search parameters'
 	(+) Switch to disable transparency recognition
-	(+) Up-to-date checker in Joomla! cPanel
+	(+) Up-to-date checker for SobiPro applications in Joomla! cPanel
 
 	(!) Loading all fonts into the category edit screen
 	(!) Search phrases adapted to template style
