--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -26,9 +26,9 @@ SP.TP.CONFIG.TOPMENU="Top Menu"
 SP.TP.CONFIG.TOPMENU_STANDARD="Standard Top Menu"
 SP.TP.CONFIG.TOPMENU_BAR="Link Bar"
 SP.TP.CONFIG.TOPMENU_BUTTON="Button Bar"
-SP.TP.CONFIG.TOPMENU_BUTTON_POS="Float Search/Add Buttons"
-SP.TP.CONFIG.LEFT="Left"
-SP.TP.CONFIG.RIGHT="Right"
+SP.TP.CONFIG.TOPMENU_BUTTON_POS="Float search/add buttons"
+SP.TP.CONFIG.LEFT="left"
+SP.TP.CONFIG.RIGHT="right"
 SP.TP.CONFIG.FONTS="Fonts"
 SP.TP.CONFIG.FONTSIZE="Base font size"
 SP.TP.CONFIG.FONT="Base font"
