--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,6 +21,8 @@
 SP.UPDATE.APPS_OUTDATED="SobiPro application(s) are outdated and need to be updated"
 SP.UPDATE.APPS_UPDATE=" View Updates"
 
+SP.FM.FIELD_IMAGE_NAME="Name"
+SP.FMN.FIELD_ENTRYINPUT_DVIMAGE="Large Image Settings"
 SP.FMN.IMG.DETECT_TRANSPARENCY="Detect Transparency"
 SP.FORMS="Entry & Search Form"
 SP.FORMS_TITLE="Title"
@@ -365,10 +367,10 @@ SP.FM.IMG.CREATE_THUMB="Create Thumbnail"
 SP.FM.IMG.THUMB_NAME="Thumbnail Name"
 SP.FM.IMG.SHOW_IN_V_CARD="Show in vCard"
 SP.FM.IMG.THUMBAIL_OPT="thumbnail"
-SP.FM.IMG.IMAGE_OPT="image"
+SP.FM.IMG.IMAGE_OPT="large image"
 SP.FM.IMG.ORGINAL_OPT="original"
 SP.FM.IMG.SHOW_IN_DETAILS_VIEW="Show in Details View"
-SP.FM.IMG.IMG_FLOAT="Float Image"
+SP.FM.IMG.IMG_FLOAT="Float Large Image"
 SP.FM.IMG.THUMB_FLOAT="Float Thumbnail"
 SP.FM.IMG.FLOAT_NO_OPT="No"
 SP.FM.IMG.FLOAT_RIGHT_OPT="Right"
