--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -27,6 +27,12 @@ Legend:
 
 
 -------------------
+1.3.6 ()
+-------------------
+	(#) Installing files to template storage throws error
+
+
+-------------------
 1.3.5 (4 March 2017)
 -------------------
 	(!) Changed string related functions to multibyte in router and alpha view
