--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -18,6 +18,7 @@
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
 
+SP.ERR.SITE_TITLE_DETAIL="Detailed Error Log Data"
 SP.UPDATE.APPS_OUTDATED="SobiPro application(s) are outdated and need to be updated"
 SP.UPDATE.APPS_UPDATE=" View Updates"
 
