(#) Wrong Ajax definition (switch to Framework) while installing app from repository (Issue #1791)

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -26,6 +26,14 @@ Legend:
  (!) - Change
 
 
+
+-------------------
+1.3.7 ()
+-------------------
+	(#) Wrong Ajax definition (switch to Framework) while installing app from repository (Issue #1791)
+	(#)
+
+
 -------------------
 1.3.6 (4 March 2017)
 -------------------
