--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -31,8 +31,10 @@ Legend:
 1.3.7 ()
 -------------------
 	(#) Wrong Ajax definition (switch to Framework) while installing app from repository (Issue #1791)
-	(#)
+	(#) Added exception for search result in router (Issue #1783)
 
+
+	(!) Moved Sobi Framework inclusion to the loader
 
 -------------------
 1.3.6 (4 March 2017)
