--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -41,16 +41,11 @@ Legend:
 -------------------
 1.3.7 ()
 -------------------
+	(#) Wrong Ajax definition (switch to Framework) while installing applications from repository (Issue #1791)
+	(#) Added exception for search results in router (Issue #1783)
 
+	(!) Sobi Framework inclusion moved to the loader
 
--------------------
-1.3.7 ()
--------------------
-	(#) Wrong Ajax definition (switch to Framework) while installing app from repository (Issue #1791)
-	(#) Added exception for search result in router (Issue #1783)
-
-
-	(!) Moved Sobi Framework inclusion to the loader
 
 -------------------
 1.3.6 (4 March 2017)
