(#) Wrong condition for subject while parsing text node in administrator area (Issue #1801)

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -33,7 +33,8 @@ Legend:
 	(#) Wrong Ajax definition (switch to Framework) while installing app from repository (Issue #1791)
 	(#) Added exception for search result in router (Issue #1783)
 	(#) CSS cache is trying to load CSS files over URL (Issue #1745 again and #1813)
-	(#) Rss feed use general settings (Issue #1802)
+	(#) RSS feed use general settings (Issue #1802)
+	(#) Wrong condition for subject while parsing text node in administrator area (Issue #1801)
 
 
 	(!) Moved Sobi Framework inclusion to the loader
