--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -35,6 +35,7 @@ Legend:
 	(#) CSS cache is trying to load CSS files over URL (Issue #1745 again and #1813)
 	(#) RSS feed use general settings (Issue #1802)
 	(#) Wrong condition for subject while parsing text node in administrator area (Issue #1801)
+	(#) Different directory separators used in path. (Issue #1797)
 
 
 	(!) Moved Sobi Framework inclusion to the loader
