--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -903,8 +903,8 @@ SP.AMN.APPS_SECTION_HEAD="Section Applications"
 SP.AMN.APPS_SECTION_TPL="Section Template"
 SP.AMN.APPS="Applications"
 SP.EX.SECTION_EXPL="You can activate or deactivate here applications listed below for the 'var:[section]' section."
-SP.UPD.UPDATE_AVAILABLE="New version %s is available"
-SP.UPD.UP_TO_DATE="Current version is up to date"
+SP.UPD.UPDATE_AVAILABLE="outdated; version %s available"
+SP.UPD.UP_TO_DATE="up to date"
 SP.APP.BANK_TRANSFER="Offline Payment"
 SP.APP.PAYPAL="PayPal Payment"
 SP.APP.BANK_TRANSFER_NAME="Offline Payment Settings"
