Section Rules/ part 1 & b3-default3 template update

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,7 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.MN.SECTION.ACL="Section Rules"
 
 SP.ERR.SITE_TITLE_DETAIL="Detailed Error Log Data"
 SP.UPDATE.APPS_OUTDATED="SobiPro application(s) are outdated and need to be updated"
