changes from master merged

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -50,7 +50,7 @@ Legend:
 	(#) CSS cache is trying to load CSS files over URL (Issue #1745 again and #1813)
 	(#) RSS feed use general settings (Issue #1802)
 	(#) Wrong condition for subject while parsing text node in administrator area (Issue #1801)
-	(#) Different directory separators used in path. (Issue #1797)
+	(#) Different directory separators used in path (Issue #1797)
 	(#) Overwritten "searchSuggest" method in image field (Issue #1828)
 
 	(!) Sobi Framework inclusion moved to the loader
