--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -28,18 +28,19 @@ Legend:
 
 
 -------------------
-1.3.7 ()
+1.3.7 (28 April 2017)
 -------------------
-	(#) Wrong Ajax definition (switch to Framework) while installing app from repository (Issue #1791)
-	(#) Added exception for search result in router (Issue #1783)
-	(#) CSS cache is trying to load CSS files over URL (Issue #1745 again and #1813)
-	(#) RSS feed use general settings (Issue #1802)
-	(#) Wrong condition for subject while parsing text node in administrator area (Issue #1801)
-	(#) Different directory separators used in path. (Issue #1797)
-	(#) Overwritten "searchSuggest" method in image field (Issue #1828)
-
-
 	(!) Moved Sobi Framework inclusion to the loader
+
+	(#) Wrong Ajax definition (switch to Framework) while installing application from repository (Issue #1791)
+	(#) Added exception for search results in router (Issue #1783)
+	(#) CSS cache is trying to load CSS files over URL (Issue #1745 again and #1813)
+	(#) RSS feeds use general settings (Issue #1802)
+	(#) Wrong condition for subject while parsing text node in administrator area (Issue #1801)
+	(#) Different directory separators used in path (Issue #1797)
+	(#) Overwritten "searchSuggest" method in image field (Issue #1828)
+	(#) Switching off transparency detection for images does not work (Issue #1833)
+
 
 -------------------
 1.3.6 (4 March 2017)
