(#) Font Awesome 3 local does not show icons in front-end datepicker

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -39,7 +39,8 @@ Legend:
 	(!) Less folder removed; less files moved to css folder
 	(!) Redesign of entries & categories in SobiPro's cPanel
 
-	(#) Codemirror truncated in Joomla 3.7
+	(#) Font Awesome 3 local does not show icons in front-end datepicker
+
 
 -------------------
 1.3.7 (28 April 2017)
@@ -54,6 +55,7 @@ Legend:
 	(#) Different directory separators used in path (Issue #1797)
 	(#) Overwritten "searchSuggest" method in image field (Issue #1828)
 	(#) Switching off transparency detection for images does not work (Issue #1833)
+	(#) Codemirror truncated in Joomla 3.7
 
 
 -------------------
