(!) Font Awesome 4 updated to 4.7.0

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -38,6 +38,7 @@ Legend:
 
 	(!) Less folder removed; less files moved to css folder
 	(!) Redesign of entries & categories in SobiPro's cPanel
+    (!) Font Awesome 4 updated to 4.7.0
 
 	(#) Font Awesome 3 local does not show icons in front-end datepicker
 	(#) Solution to overcome Joomla's IcoMoon when Font Awesome 3 is loaded via CDN
