toolbar cleaned up / part 2

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,6 +19,7 @@
 
 SP.MN.SECTION.ACL="Section Rules"
 SP.TB.RULE="Rule"
+SP.TB.SIDEMENU="Show Menu"
 
 SP.ERR.SITE_TITLE_DETAIL="Detailed Error Log Data"
 SP.UPDATE.APPS_OUTDATED="SobiPro application(s) are outdated and need to be updated"
