(!) Improved field type info in fields manager

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -20,6 +20,7 @@
 SP.MN.SECTION.ACL="Section Rules"
 SP.TB.RULE="Rule"
 SP.TB.SIDEMENU="Show Menu"
+SP.FMN.TYPE_CHANGE_TO="Change to"
 
 SP.ERR.SITE_TITLE_DETAIL="Detailed Error Log Data"
 SP.UPDATE.APPS_OUTDATED="SobiPro application(s) are outdated and need to be updated"
