Category specific fields

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,9 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.CAT.CATEGORY_ENTRY_FIELDS="Entry Fields"
+SP.USE_ALL_FIELDS="Use All Fields"
+
 SP.MN.SECTION.ACL="Section Rules"
 SP.TB.RULE="Rule"
 SP.TB.SIDEMENU="Show Menu"
