--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -18,7 +18,8 @@
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
 SP.CAT.CATEGORY_ENTRY_FIELDS="Entry Fields"
-SP.USE_ALL_FIELDS="Use All Fields"
+SP.USE_ALL_FIELDS="Use all fields"
+SP.ONLY_SPECIFIC_FIELDS="Fields to use in this category"
 
 SP.MN.SECTION.ACL="Section Rules"
 SP.TB.RULE="Rule"
