(+) Switch of some fields for a certain category (views only)/2

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,7 +19,7 @@
 
 SP.CAT.CATEGORY_ENTRY_FIELDS="Entry Fields"
 SP.USE_ALL_FIELDS="Use all fields"
-SP.ONLY_SPECIFIC_FIELDS="Fields to use in this category"
+SP.ONLY_SPECIFIC_FIELDS="Fields to use"
 
 SP.MN.SECTION.ACL="Section Rules"
 SP.TB.RULE="Rule"
