Possibility to enable/disable field for autosuggest

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,7 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.FMN.SUGGESTING="Enabled in Autosuggest"
 SP.CAT.CATEGORY_ENTRY_FIELDS="Entry Fields"
 SP.USE_ALL_FIELDS="Use all fields"
 SP.ONLY_SPECIFIC_FIELDS="Fields to use"
