Google maps in tab resizing script improved

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -82,8 +82,14 @@ SP.TP.SETTINGS_VCARD="vCard"
 SP.TP.CONFIG.TEXTLENGTH="Shorten text to"
 SP.TP.CONFIG.ENTRIES_IMGSIZESMALL="Image width"
 SP.TP.SETTINGS_DETAILS="Details View"
-SP.TP.CONFIG.CAROUSELIMG="Carousel image height"
 SP.TP.CONFIG.TABSTYLE="Tab style"
+SP.TP.CONFIG.CAROUSEL="Carousel"
+SP.TP.CONFIG.CAROUSELIMG="Carousel image height"
+SP.TP.CONFIG.CAROUSELIMGWIDTH="Width"
+SP.TP.CONFIG.CAROUSELSOURCE="Image source"
+SP.TP.CONFIG.CAROUSELSRCFOLDER="from folder"
+SP.TP.CONFIG.CAROUSELSRCGALLERY="from gallery"
+SP.TP.CONFIG.CAROUSELPATH="Path to images"
 
 SP.TP.SETTINGS_VIEW="View Settings"
 SP.TP.SETTINGS_VIEWFEATURE="View Features"
