new texts for template settings

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -90,6 +90,10 @@ SP.TP.CONFIG.CAROUSELSOURCE="Image source"
 SP.TP.CONFIG.CAROUSELSRCFOLDER="from folder"
 SP.TP.CONFIG.CAROUSELSRCGALLERY="from gallery"
 SP.TP.CONFIG.CAROUSELPATH="Path to images"
+SP.TP.CONFIG.CAROUSELEFFECT="Effect"
+SP.TP.CONFIG.CAROUSELEFNONE="none"
+SP.TP.CONFIG.CAROUSELEFSLIDE="slide"
+SP.TP.CONFIG.CAROUSELEFFADE="fade"
 
 SP.TP.SETTINGS_VIEW="View Settings"
 SP.TP.SETTINGS_VIEWFEATURE="View Features"
