JS error after clicking on menu drop down

--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -139,7 +139,7 @@ SP.DB_REPORTS_ERR="Db reports: %s."
 SP.ENTRY_DOES_NOT_EXIST="Entry %s does not exist."
 SP.FIELD_FILTER_ERR="Fatal error. Data input filter '%s' does not exist."
 SP.FIELD_IMG_CANNOT_RESAMPLE="Cannot resample image: %s."
-SP.FIELD_IMG_CANNOT_RESAMPLE="Cannot crop image: %s."
+SP.FIELD_IMG_CANNOT_CROP="Cannot crop image: %s."
 SP.FIELD_IMG_TOO_LARGE="The uploaded file size for field '%s' is too big. The file size is %d. Maximal allowed file size cannot be greater than %d."
 SP.FIELD_MAIL_NO_MX="The given email address '%s' seems to be incorrect. Please try again. MX record not found."
 SP.FIELD_MAIL_WRONG_FORM="The given email address '%s' seems to be incorrect. Please try again. Wrong format."
