(+) Possibility to delete all entries in a section

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -12,10 +12,16 @@
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
 ; See http://www.gnu.org/licenses/gpl.html and https://www.sigsiu.net/licenses.
 
-; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+; This program is distributed in the hope that it will be fduseful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
+
+
+SP.TB.DELETE_ALL="Purge All"
+SP.TB.JS_DELETE_ALL_ENTRIES_WARN="Are you really sure you want to delete all entries? This action cannot be undone"
+SP.DELETE_ENTRIES_COUNT="Found %d entries to delete"
+SP.DELETED_ENTRY="Entry '%s' deleted"
 
 SP.FMN.SUGGESTING="Enabled in Autosuggest"
 SP.CAT.CATEGORY_ENTRY_FIELDS="Entry Fields"
