(+) Basic template development support added (fields highlighting) (#) Class css-search not output in the template

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,8 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.CFG.DEVTEMPLATE="Development Support"
+SP.CFG.DEVELOPMENT="Fields highlighting"
 
 SP.TB.DELETE_ALL="Purge All"
 SP.TB.JS_DELETE_ALL_ENTRIES_WARN="Are you really sure you want to delete all entries? This action cannot be undone"
