--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -59,6 +59,7 @@ SP.TP.CONFIG.ENTRY_HELPPOSITION="Description position"
 SP.TP.CONFIG.ENTRY_HELPPOSITION_POPUP="popup"
 SP.TP.CONFIG.ENTRY_HELPPOSITION_ABOVE="above"
 SP.TP.CONFIG.ENTRY_HELPPOSITION_BELOW="below"
+SP.TP.CONFIG.ENTRY_HELPPOSITION_RIGHT="on the right side"
 SP.TP.CONFIG.ENTRY_REDIRECTLOGIN="Redirect to login page"
 
 SP.TP.SETTINGS_SEARCH="Search Form Settings"
