use of sortBy Method instead of sortByAdm method in admin section controller

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -20,8 +20,8 @@
 SP.CFG.DEVTEMPLATE="Development Support"
 SP.CFG.DEVELOPMENT="Fields highlighting"
 
-SP.TB.DELETE_ALL="Purge All"
-SP.TB.JS_DELETE_ALL_ENTRIES_WARN="Are you really sure you want to delete all entries? This action cannot be undone"
+SP.TB.DELETE_ALL="Purge"
+SP.TB.JS_DELETE_ALL_ENTRIES_WARN="Are you really sure you want to delete all entries in this section? This action cannot be undone!"
 SP.DELETE_ENTRIES_COUNT="Found %d entries to delete"
 SP.DELETED_ENTRY="Entry '%s' deleted"
 
