some Global settings renamed

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,10 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.GB.CFG.FILES="Files"
+SP.GBN.CFG.INCLUDE_JS_CACHE="Javascript"
+SP.GBN.CFG.INCLUDE_CSS_CACHE="CSS"
+
 SP.CFG.DEVTEMPLATE="Development Support"
 SP.CFG.DEVELOPMENT="Fields highlighting"
 
