(!) Template debug options moved to section settings

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -20,6 +20,7 @@
 SP.GB.CFG.FILES="Files"
 SP.GBN.CFG.INCLUDE_JS_CACHE="Javascript"
 SP.GBN.CFG.INCLUDE_CSS_CACHE="CSS"
+SP.GBN.CFG.ERROR_HEAD="Error Logging"
 
 SP.CFG.DEVTEMPLATE="Development Support"
 SP.CFG.DEVELOPMENT="Fields highlighting"
