(!) Template information window improved; text added grrr

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,8 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.TP.TEMPLATE_PREVIEW="Preview Image"
+
 SP.GB.CFG.FILES="Files"
 SP.GBN.CFG.INCLUDE_JS_CACHE="Javascript"
 SP.GBN.CFG.INCLUDE_CSS_CACHE="CSS"
