(!) General settings for title and description of the forms moved down to template tab/2

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -51,7 +51,7 @@ SP.UPDATE.APPS_UPDATE=" View Updates"
 SP.FM.FIELD_IMAGE_NAME="Name"
 SP.FMN.FIELD_ENTRYINPUT_DVIMAGE="Large Image Settings"
 SP.FMN.IMG.DETECT_TRANSPARENCY="Detect Transparency"
-SP.FORMS="Forms"
+SP.FORMS="Form Settings"
 SP.FORMS_TITLE="Title"
 
 SP.EN.REJECT_HISTORY="during rejection"
