SSL certificate error message improved

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -18,7 +18,7 @@
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
 
-SP.UPDATE.SSL_ERROR="The SSL certificate for the SobiPro repository has exired. Please <a href=\"https://www.sigsiu.net/center/installation-update/89-installation-of-the-sobipro-repository\" target=\"_blank\" ><i class=\"icon-link\"></i>re-install the repository</a>."
+SP.UPDATE.SSL_ERROR="The SSL certificate for the SobiPro repository has exired, or your server does not allow to connect to our site to check the certificate. Please <a href=\"https://www.sigsiu.net/center/installation-update/89-installation-of-the-sobipro-repository\" target=\"_blank\" ><i class=\"icon-link\"></i>re-install the repository</a>, or check outgoing access for SSL (CURL) on your server."
 
 SP.TP.TEMPLATE_PREVIEW="Preview Image"
 
