(+) New ACL rule 'approve.own'

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -974,13 +974,14 @@ SP.PERMISSIONS.ADM_FIELDS_EDIT="edit admin fields"
 SP.PERMISSIONS.ADM_FIELDS_SEE="see admin fields"
 SP.PERMISSIONS.EDIT_*="edit any"
 SP.PERMISSIONS.EDIT_OWN="edit own"
-SP.PERMISSIONS.MANAGE_OWN="manage own"
+SP.PERMISSIONS.MANAGE_OWN="approve own"
 SP.PERMISSIONS.MANAGE_*="approve any"
 SP.PERMISSIONS.PAYMENT_FREE="skip payments"
 SP.PERMISSIONS.*_*="all permissions"
 SP.PERMISSIONS.ACCESS_UNAPPROVED_ANY="access any unapproved"
 SP.PERMISSIONS.ACCESS_UNPUBLISHED_ANY="access any unpublished"
 SP.PERMISSIONS.ACCESS_UNPUBLISHED_OWN="access own unpublished"
+SP.PERMISSIONS.ACCESS_UNAPPROVED_OWN="access own unapproved"
 SP.PERMISSIONS.PUBLISH_OWN="publish own"
 SP.PERMISSIONS.PUBLISH_*="publish any"
 SP.TP.VER="Version"
