--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -17,6 +17,8 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.ENTRY_STATUS_EXPIRED="The entry's status of this particular entry is 'expired'. You can see this entry because you have permission to see expired entries."
+
 SP.TP.SEARCH_HIDE="Hide search parameters"
 SP.TP.SEARCH_REFINE="Refine search parameters"
 
