(+) Possibility to define own template colours in the template settings

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -39,6 +39,15 @@ SP.TP.CONFIG.SHOWPRT="Show print button"
 SP.TP.CONFIG.GALLERY="Gallery image size"
 SP.TP.CONFIG.PRINTIMG="Print Images"
 
+SP.TP.CONFIG.CUSTOM="Custom colours"
+SP.TP.CONFIG.CUSTOM_BASE="Base colour"
+SP.TP.CONFIG.CUSTOM_TEXT="Text colour"
+SP.TP.CONFIG.CUSTOM_HOVER="Hover colour"
+SP.TP.CONFIG.CUSTOM_FONT="Font colour"
+SP.TP.CONFIG.CUSTOM_ACTIVE="Active colour"
+SP.TP.CONFIG.CUSTOM_ALERT="Alert colour"
+SP.TP.CONFIG.CUSTOM_IMPORTANT="Important colour"
+
 SP.TP.CONFIG.RSS="RSS Feeds"
 SP.TP.CONFIG.RSS_SHOWFEEDS="Show feeds from"
 SP.TP.CONFIG.RSS_ENTRIES="entries"
