improved colour names

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -41,8 +41,8 @@ SP.TP.CONFIG.PRINTIMG="Print Images"
 
 SP.TP.CONFIG.CUSTOM="Custom colours"
 SP.TP.CONFIG.CUSTOM_BASE="Base colour"
-SP.TP.CONFIG.CUSTOM_TEXT="Text colour"
-SP.TP.CONFIG.CUSTOM_HOVER="Hover colour"
+SP.TP.CONFIG.CUSTOM_BTEXT="Basetext colour"
+SP.TP.CONFIG.CUSTOM_ATEXT="Activetext colour"
 SP.TP.CONFIG.CUSTOM_FONT="Font colour"
 SP.TP.CONFIG.CUSTOM_ACTIVE="Active colour"
 SP.TP.CONFIG.CUSTOM_ALERT="Alert colour"
