(!) SobiPro background and font colours adjustable via template settings

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -43,13 +43,15 @@ SP.TP.CONFIG.CUSTOM="Custom colours"
 SP.TP.CONFIG.CUSTOM_BASE="Base colour"
 SP.TP.CONFIG.CUSTOM_BTEXT="Basetext colour"
 SP.TP.CONFIG.CUSTOM_ATEXT="Activetext colour"
-SP.TP.CONFIG.CUSTOM_FONT="Font colour"
 SP.TP.CONFIG.CUSTOM_ACTIVE="Active colour"
 SP.TP.CONFIG.CUSTOM_ALERT="Alert colour"
 SP.TP.CONFIG.CUSTOM_IMPORTANT="Important colour"
 SP.TP.CONFIG.CUSTOM_LIGHTB="Light background colour"
 SP.TP.CONFIG.CUSTOM_MEDIUMB="Medium background colour"
 SP.TP.CONFIG.CUSTOM_DARKB="Dark background colour"
+
+SP.TP.CONFIG.CUSTOM_BACK="Main background colour"
+SP.TP.CONFIG.CUSTOM_FONT="Font colour"
 
 SP.TP.CONFIG.RSS="RSS Feeds"
 SP.TP.CONFIG.RSS_SHOWFEEDS="Show feeds from"
