(!) Category icon handling improved; global category icon added

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,8 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.SECN.CFG.CATEGORY_ICON_SIZE="Global icon size"
+
 ; all permissions
 SP.ADM_PERMISSIONS.*_*="all permissions"
 SP.ADM_PERMISSIONS.EDIT_*="edit"
