(+) Show icon next to category name

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -114,6 +114,7 @@ SP.TP.SETTINGS_VIEW="View Settings"
 SP.TP.SETTINGS_VIEWFEATURE="View Features"
 SP.TP.CONFIG.HIDECATEGORIES="Categories"
 SP.TP.CONFIG.LST_COUNT="Count entries"
+SP.TP.CONFIG.SHOWICON="Show icon next to name"
 SP.TP.CONFIG.SECTION="Section View"
 SP.TP.CONFIG.CAT="Category View"
 SP.TP.CONFIG.LIST="Listing View"
