(+) Additional template style added: elevated (selectable from template settings)

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -16,6 +16,10 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
 
+SP.TP.CONFIG.DESIGN="Design"
+SP.TP.CONFIG.DESIGN_STANDARD="Standard"
+SP.TP.CONFIG.DESIGN_ELEVATED="Elevated"
+
 SP.TP.CONFIG.DOCUMENTATION="You will find information on how to use these settings in the <a class="alert-link" href="https://www.sigsiu.net/default-template-settings">documentation</a>. Support is available for members in our <a class="alert-link" href="https://www.sigsiu.net/support">support area</a>."
 SP.TP.DEFAULT="default"
 SP.TP.SETTINGS_GENERAL="General Settings"
