--- a/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
@@ -14,7 +14,7 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
+; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
 
 SP.JS_ENTRY_REJECT_TEMPLATE_NAME_PROMPT="Choose a name for the template"
 SP.JS_ENTRY_REJECT_TEMPLATE_DELETE="Are you sure you want to delete the selected template?"
