--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -15,7 +15,7 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
+; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
 
 SP.CANNOT_COPY_FILE="Cannot copy file %s to %s"
 SP.CAT_FIELD_SELECT_CAT_WITH_NO_CHILDS="Please select a category without subcategories in field '%s'."
