--- a/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
@@ -15,7 +15,7 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
+; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
 
 SP.ABOUT.SP_DESC2=" The pioneer of the multi-directory feature, provides now as first component, the category fields!"
 SP.ABOUT.ABOUT_PANE="About SobiPro"
