--- a/Site/usr/locale/adm/en-GB.com_sobipro.check.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.check.ini
@@ -15,7 +15,7 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
+; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
 
 SP.REQ.MYSQL_VIEWS_NOT_AVAILABLE="MySQL views are not available."
 SP.REQ.MYSQL_VIEWS_AVAILABLE="MySQL views are available."
