--- a/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
@@ -14,7 +14,7 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
+; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
 
 SP.WARNING.NO_NAME_FIELD_SELECTED="<strong>Warning</strong>: Please select a name field for this section!"
 SP.WARNING.ENTRIES_BASE_DATA_INCOMPLETE="<strong>Warning</strong>: Some entries are missing base data. Please check the configuration."
