--- a/Site/usr/locale/site/en-GB.com_sobipro.js.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.js.ini
@@ -15,7 +15,7 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/center/51-our-translation-teams.
+; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages
 
 SP.JS_PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields!"
 SP.JS_ADD_ENTRY_FIELD_REQUIRED="$field is required. Please fill in all required fields."
