(#) Status of 'xml output' does not refelect the status of the setting in the sections

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,7 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
 
+SP.CPANEL_SECTONS="Section(s)"
 SP.SECN.CFG.CATEGORY_ICON_SIZE="Global icon size"
 
 ; all permissions
