(+) Information in entry form if a field is administrative

--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -18,6 +18,7 @@
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
 
 
+SP.TP.ADMINISTRATIVE="The field %s is an administrative field and not visible for regular users. You see this field because you have administrator rights."
 SP.ARIA.FILEUP-GROUP="file upload button group"
 
 SP.ENTRY_STATUS_EXPIRED="The entry's status of this particular entry is 'expired'. You can see this entry because you have permission to see expired entries."
