--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -6,7 +6,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -17,6 +17,7 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
 
+SP.CANNOT_GET_TYPED_FIELD="Cannot get field for type. Db reports: %s."
 SP.CANNOT_COPY_FILE="Cannot copy file %s to %s"
 SP.CAT_FIELD_SELECT_CAT_WITH_NO_CHILDS="Please select a category without subcategories in field '%s'."
 
