(!) User interface of Paypal payment application improved

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -6,7 +6,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -959,7 +959,9 @@ SP.APP.PPP_NAME="PayPal Payment Settings"
 SP.APP.PPP_URL="Paypal URL"
 SP.APP.PPP_EMAIL="Recipient Email Address"
 SP.APP.PPP_RURL="Return URL"
+SP.APP.PPP_CANCELURL="Cancel URL"
 SP.APP.PPP_CC="Currency Code"
+SP.APP.PPP_LOC="Localized Button"
 SP.APP.PPP_EXPL="Explanation Text"
 SP.APP.PPP_SUBJECT="Payment Subject"
 SP.EX.APP_UPDATE_DISABLED="Not Applicable"
