(!) Number of possible sub-subcategories increased to 30 (not recommended)

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,11 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
 
+SP.SELECT_20_NOT_RECOMMENDED="20 (not recommended)"
+SP.SELECT_25_NOT_RECOMMENDED="25 (not recommended)"
+SP.SELECT_30_NOT_RECOMMENDED="30 (not recommended)"
+SP.SELECT_40_NOT_RECOMMENDED="40 (not recommended)"
+
 SP.CPANEL_SECTONS="Section(s)"
 SP.SECN.CFG.CATEGORY_ICON_SIZE="Global icon size"
 
