(+) new template colour @link-color
	(!) Improvement of template style 'elevated'
	(!) Improvement of all colour themes
	(!) Default template version V4.1

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -48,6 +48,7 @@ SP.TP.CONFIG.CUSTOM_BASE="Base colour"
 SP.TP.CONFIG.CUSTOM_BTEXT="Basetext colour"
 SP.TP.CONFIG.CUSTOM_ATEXT="Activetext colour"
 SP.TP.CONFIG.CUSTOM_ACTIVE="Active colour"
+SP.TP.CONFIG.CUSTOM_LINK="Link colour"
 SP.TP.CONFIG.CUSTOM_ALERT="Alert colour"
 SP.TP.CONFIG.CUSTOM_IMPORTANT="Important colour"
 SP.TP.CONFIG.CUSTOM_LIGHTB="Light background colour"
